@@ -1,3 +1,4 @@
+Micro tab: If there is no water, move particles quickly toward each other to form crystals since there should be no free ions
 Micro tab: Made button read "remove solute" if one solute type, "remove solutes" if two solute types
 Fixed: water not centered on faucets
 Micro tab: Fixed: particles don't flow out of the output faucet at the right location
